# resident-utils-rs

./: CHANGELOG.md  Cargo.toml  README.md  resident-utils-rs.code-workspace
examples/bot/: Cargo.toml
examples/bot/src/: main.rs
examples/db/sql/: 01_data.sql
examples/db/sql/table/: 03_accounts.sql
examples/example/: Cargo.toml
examples/example/src/: main.rs
examples/example_sqlx/: Cargo.toml
examples/example_sqlx/src/: main.rs
examples/holder_pg/: Cargo.toml
examples/holder_pg/src/: account.rs  main.rs  pg.rs
src/: lib.rs  postgres.rs  postgres_redis.rs  redis.rs  retry.rs  sqlx.rs  sqlx_redis.rs
src/postgres/: holder.rs
src/sqlx/: holder.rs
