workspace = { members = [ "examples/example"] }

[package]
name = "resident-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde", "clock"] }
cron = "0.12"
deadpool-postgres = { version = "0.12", features = ["serde"], optional = true }
deadpool-redis = { version = "0.14", features = ["serde"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "time", "signal"] }
tokio-util = "0.7"
tracing = "0.1"

[features]
postgres = ["deadpool-postgres"]
redis = ["deadpool-redis"]

