workspace = { members = [ "examples/bot", "examples/example", "examples/holder_pg"] }

[package]
name = "resident-utils"
version = "0.2.2"
edition = "2021"
authors = ["aoyagikouhei <aoyagi.kouhei@gmail.com>"]
license = "MIT"
description = "Resident program library."
repository = "https://github.com/aoyagikouhei/resident-utils-rs"
keywords = ["resident", "utility", "daemon"]
categories = ["asynchronous"]
readme = "README.md"
documentation = "https://docs.rs/resident-utils"

[dependencies]
chrono = "0.4"
cron = "0.12"
deadpool-postgres = { version = "0.12", features = ["serde"], optional = true }
deadpool-redis = { version = "0.14", features = ["serde"], optional = true }
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "time", "signal"] }
tokio-util = "0.7"
tracing = "0.1"

[features]
postgres = ["deadpool-postgres"]
redis = ["deadpool-redis"]

[package.metadata.docs.rs]
all-features = true
features = ["postgres", "redis"]
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
