workspace = { members = [ "examples/bot", "examples/example", "examples/holder_pg", "examples/example_sqlx"] }

[package]
name = "resident-utils"
version = "0.7.0"
edition = "2021"
authors = ["aoyagikouhei <aoyagi.kouhei@gmail.com>"]
license = "MIT"
description = "Resident program library."
repository = "https://github.com/aoyagikouhei/resident-utils-rs"
keywords = ["resident", "utility", "daemon"]
categories = ["asynchronous"]
readme = "README.md"
documentation = "https://docs.rs/resident-utils"

[dependencies]
chrono = "0.4.38"
cron = "0.13.0"
deadpool-postgres = { version = "0.14.0", features = ["serde"], optional = true }
deadpool-redis = { version = "0.18.0", features = ["serde"], optional = true }
sqlx = { version = "0.8.2", features = [ "runtime-tokio", "postgres"], optional = true }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "time", "signal"] }
tokio-util = "0.7.12"
tracing = "0.1.40"

[features]
postgres = ["dep:deadpool-postgres"]
redis = ["dep:deadpool-redis"]
sqlx = ["dep:sqlx"]

[package.metadata.docs.rs]
all-features = true
features = ["postgres", "redis", "sqlx"]
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[dev-dependencies]
anyhow = "1.0.93"
tokio = { version = "1.41.1", features = ["macros"] }