[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
resident-utils = { path="../.." }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = "0.3"
twapi-v2 = { version = "0.10.1", default-features = false, features = ["rustls-tls", "oauth10a"] }

[features]
postgres = []
redis = []