[package]
name = "example_sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = {version="0.4", features=["serde"]}
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "uuid", "macros", "chrono", "rust_decimal", "bit-vec", "ipnetwork", "mac_address", "time"] }
resident-utils = { path="../..", features = ["sqlx"] }
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = "0.3"
url = "2.5.0"
uuid = "1.11"

[features]
postgres = []
redis = []
sqlx = []